--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -1,27 +1,99 @@
+
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="normaliz.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style_menu.css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+	<script src="carousel.js"></script>
 </head>
 <body>
 	<div class="wrapper">
 		<header class="main-header">
 			<h1 class="main-header__logo"></h1>
+			<nav class="front__nav">
+				<a href="#" class="link-1">näidismenüü</a>
+				<a href="#" class="link-2">galerii</a>
+				<a href="#" class="link-3">päring</a>
+			</nav>
+			<ul class="socials-list">
+				<li><a href="https://www.facebook.com/miamcatering/" class="fb">facebook</a></li>
+				<li><a href="#" class="insta">instagram</a></li>
+			</ul>
 		</header>
 		<main class="main-content">
-			<article class="front">
-				<h1>Menüüd</h1>
-				<nav class="front__nav">
-					<a href="#" class="link-1">firmaüritus</a>
-					<a href="#" class="link-2">pulm</a>
-					<a href="#" class="link-3">sünnipäev</a>
-					<a href="#" class="link-4">kodukokk</a>
-				</nav>
-			</article>
+			  <div class="carousel carousel-slider center" data-indicators="true">
+			    <div class="carousel-fixed-item center">
+			      <a class="btn waves-effect white grey-text darken-text-2">button</a>
+			    </div>
+			    <div class="carousel-item red white-text" href="#one!">
+			      <h2>First Panel</h2>
+			      <p class="white-text">This is your first panel</p>
+			    </div>
+			    <div class="carousel-item amber white-text" href="#two!">
+			      <h2>Second Panel</h2>
+			      <p class="white-text">This is your second panel</p>
+			    </div>
+			    <div class="carousel-item green white-text" href="#three!">
+			      <h2>Third Panel</h2>
+			      <p class="white-text">This is your third panel</p>
+			    </div>
+			    <div class="carousel-item blue white-text" href="#four!">
+			      <h2>Fourth Panel</h2>
+			      <p class="white-text">This is your fourth panel</p>
+			    </div>
+			  </div>
+			<!--<article class="firmaüritus">
+				<h1>firmaüritus</h1>
+				<ul class="menu">
+					<li>pealkiri 1
+						<ul class="koostis">
+							<li>pliinid creme fraiche ja graavilõhega</li>
+							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+							<li>peedi ja kitsejuustu mini quiches </li>
+							<li>mini eggs benedict</li>
+							<li>maguskartuli-feta salat</li>
+							<li>vahvli ja pannkoogi skewer</li>
+							<li>chia pudding</li>
+						</ul>
+					</li>
+					<li>pealkiri 2
+						<ul class="koostis">
+							<li>pliinid creme fraiche ja graavilõhega</li>
+							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+							<li>peedi ja kitsejuustu mini quiches </li>
+							<li>mini eggs benedict</li>
+							<li>maguskartuli-feta salat</li>
+							<li>vahvli ja pannkoogi skewer</li>
+							<li>chia pudding</li>
+						</ul>	
+					</li>				
+					<li>pealkiri 3
+						<ul class="koostis">
+							<li>pliinid creme fraiche ja graavilõhega</li>
+							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+							<li>peedi ja kitsejuustu mini quiches </li>
+							<li>mini eggs benedict</li>
+							<li>maguskartuli-feta salat</li>
+							<li>vahvli ja pannkoogi skewer</li>
+							<li>chia pudding</li>
+						</ul>
+					</li>
+					<li>pealkiri 4
+						<ul class="koostis">
+							<li>pliinid creme fraiche ja graavilõhega</li>
+							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+							<li>peedi ja kitsejuustu mini quiches </li>
+							<li>mini eggs benedict</li>
+							<li>maguskartuli-feta salat</li>
+							<li>vahvli ja pannkoogi skewer</li>
+							<li>chia pudding</li>
+						</ul>
+					</li>
+				</ul>
+			</article>-->
 		</main>
 		<footer class="main-footer">
 			<p class="main-footer__logo"></p>
