Adds footer CSS

--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -6,6 +6,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="normaliz.css">
 	<link rel="stylesheet" type="text/css" href="style_menu.css">
+	<link rel="stylesheet" type="text/css" href="footer.css">
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 	<script src="carousel.js"></script>
 </head>
@@ -68,8 +69,8 @@
 							<li>maguskartuli-feta salat</li>
 							<li>vahvli ja pannkoogi skewer</li>
 							<li>chia pudding</li>
-						</ul>	
-					</li>				
+						</ul>
+					</li>
 					<li>pealkiri 3
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
