--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="normaliz.css">
 	<link rel="stylesheet" type="text/css" href="style_menu.css">
 	<link rel="stylesheet" type="text/css" href="footer.css">
-	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-	<script src="carousel.js"></script>
+	<link rel="stylesheet" type="text/css" href="tabs.css">
+
 </head>
 <body>
 	<div class="wrapper">
@@ -25,76 +25,74 @@
 			</ul>
 		</header>
 		<main class="main-content">
-			  <div class="carousel carousel-slider center" data-indicators="true">
-			    <div class="carousel-fixed-item center">
-			      <a class="btn waves-effect white grey-text darken-text-2">button</a>
-			    </div>
-			    <div class="carousel-item red white-text" href="#one!">
-			      <h2>First Panel</h2>
-			      <p class="white-text">This is your first panel</p>
-			    </div>
-			    <div class="carousel-item amber white-text" href="#two!">
-			      <h2>Second Panel</h2>
-			      <p class="white-text">This is your second panel</p>
-			    </div>
-			    <div class="carousel-item green white-text" href="#three!">
-			      <h2>Third Panel</h2>
-			      <p class="white-text">This is your third panel</p>
-			    </div>
-			    <div class="carousel-item blue white-text" href="#four!">
-			      <h2>Fourth Panel</h2>
-			      <p class="white-text">This is your fourth panel</p>
-			    </div>
-			  </div>
-			<!--<article class="firmaüritus">
-				<h1>firmaüritus</h1>
-				<ul class="menu">
-					<li>pealkiri 1
-						<ul class="koostis">
-							<li>pliinid creme fraiche ja graavilõhega</li>
-							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
-							<li>peedi ja kitsejuustu mini quiches </li>
-							<li>mini eggs benedict</li>
-							<li>maguskartuli-feta salat</li>
-							<li>vahvli ja pannkoogi skewer</li>
-							<li>chia pudding</li>
-						</ul>
-					</li>
-					<li>pealkiri 2
-						<ul class="koostis">
-							<li>pliinid creme fraiche ja graavilõhega</li>
-							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
-							<li>peedi ja kitsejuustu mini quiches </li>
-							<li>mini eggs benedict</li>
-							<li>maguskartuli-feta salat</li>
-							<li>vahvli ja pannkoogi skewer</li>
-							<li>chia pudding</li>
-						</ul>
-					</li>
-					<li>pealkiri 3
-						<ul class="koostis">
-							<li>pliinid creme fraiche ja graavilõhega</li>
-							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
-							<li>peedi ja kitsejuustu mini quiches </li>
-							<li>mini eggs benedict</li>
-							<li>maguskartuli-feta salat</li>
-							<li>vahvli ja pannkoogi skewer</li>
-							<li>chia pudding</li>
-						</ul>
-					</li>
-					<li>pealkiri 4
-						<ul class="koostis">
-							<li>pliinid creme fraiche ja graavilõhega</li>
-							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
-							<li>peedi ja kitsejuustu mini quiches </li>
-							<li>mini eggs benedict</li>
-							<li>maguskartuli-feta salat</li>
-							<li>vahvli ja pannkoogi skewer</li>
-							<li>chia pudding</li>
-						</ul>
-					</li>
-				</ul>
-			</article>-->
+
+
+
+			<div id="pk1" class="tabcontent">
+			  <div class="retsepttekst">
+					<h3>Pealkiri 1</h3>
+					<ul class="koostis">
+						<li>pliinid creme fraiche ja graavilõhega</li>
+						<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+						<li>peedi ja kitsejuustu mini quiches </li>
+						<li>mini eggs benedict</li>
+						<li>maguskartuli-feta salat</li>
+						<li>vahvli ja pannkoogi skewer</li>
+						<li>chia pudding</li>
+					</ul>
+					<a href="#">Saada päring</a>
+				</div>
+				<div class="retseptpilt">
+					<img src="images/firma1.png" alt="firma1">
+				</div>
+			</div>
+
+			<div id="pk2" class="tabcontent">
+			  <div class="retsepttekst">
+					<h3>Pealkiri 2</h3>
+					<ul class="koostis">
+						<li>pliinid creme fraiche ja graavilõhega</li>
+						<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+						<li>peedi ja kitsejuustu mini quiches </li>
+						<li>mini eggs benedict</li>
+						<li>maguskartuli-feta salat</li>
+						<li>vahvli ja pannkoogi skewer</li>
+						<li>chia pudding</li>
+					</ul>
+					<a href="#">Saada päring</a>
+				</div>
+				<div class="retseptpilt">
+					<img src="images/firma2.png" alt="firma1">
+				</div>
+			</div>
+
+			<div id="pk3" class="tabcontent">
+			  <div class="retsepttekst">
+					<h3>Pealkiri 3</h3>
+					<ul class="koostis">
+						<li>pliinid creme fraiche ja graavilõhega</li>
+						<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+						<li>peedi ja kitsejuustu mini quiches </li>
+						<li>mini eggs benedict</li>
+						<li>maguskartuli-feta salat</li>
+						<li>vahvli ja pannkoogi skewer</li>
+						<li>chia pudding</li>
+					</ul>
+					<a href="#">Saada päring</a>
+				</div>
+				<div class="retseptpilt">
+					<img src="images/firma3.png" alt="firma1">
+				</div>
+			</div>
+
+			<div class="tab">
+				<button onclick="prevFirma(event)"><</button>
+			  <button class="tablinks" onclick="uusFirma(event, 'pk1')">1</button>
+			  <button class="tablinks" onclick="uusFirma(event, 'pk2')">2</button>
+			  <button class="tablinks" onclick="uusFirma(event, 'pk3')">3</button>
+				<button onclick="nextFirma(event)">></button>
+			</div>
+
 		</main>
 		<footer class="main-footer">
 			<p class="main-footer__logo"></p>
@@ -108,4 +106,5 @@
 		</footer>
 	</div>
 </body>
+<script src="tabs.js"></script>
 </html>
