aktiivse tabi struktuuri muutus, mitme tabi isendi v6imalikuse lisamine

--- a/synna.html
+++ b/synna.html
@@ -1,4 +1,4 @@
-<div class="tabcontent">
+<div class="tabcontent synna">
   <div class="retsepttekst">
     <h3>Pealkiri 1</h3>
     <ul class="koostis">
@@ -13,11 +13,11 @@
     <a href="#">Saada päring</a>
   </div>
   <div class="retseptpilt">
-    <img src="images/firma1.png" alt="firma1">
+    <img src="images/synna1.png" alt="synna1">
   </div>
 </div>
 
-<div class="tabcontent">
+<div class="tabcontent synna">
   <div class="retsepttekst">
     <h3>Pealkiri 2</h3>
     <ul class="koostis">
@@ -32,11 +32,11 @@
     <a href="#">Saada päring</a>
   </div>
   <div class="retseptpilt">
-    <img src="images/firma2.png" alt="firma1">
+    <img src="images/synna2.png" alt="synna2">
   </div>
 </div>
 
-<div class="tabcontent">
+<div class="tabcontent synna">
   <div class="retsepttekst">
     <h3>Pealkiri 3</h3>
     <ul class="koostis">
@@ -51,14 +51,14 @@
     <a href="#">Saada päring</a>
   </div>
   <div class="retseptpilt">
-    <img src="images/firma3.png" alt="firma1">
+    <img src="images/synna3.png" alt="synna3">
   </div>
 </div>
 
 <div class="tab">
-  <button onclick="prevFirma(event)"><</button>
-  <button class="tablinks" onclick="uusFirma(event, 0)">1</button>
-  <button class="tablinks" onclick="uusFirma(event, 1)">2</button>
-  <button class="tablinks" onclick="uusFirma(event, 2)">3</button>
-  <button onclick="nextFirma(event)">></button>
+  <button onclick="prevFirma(event, 'synna')"><</button>
+  <button class="tablinks synna" onclick="uusFirma(event, 0, 'synna')">1</button>
+  <button class="tablinks synna" onclick="uusFirma(event, 1, 'synna')">2</button>
+  <button class="tablinks synna" onclick="uusFirma(event, 2, 'synna')">3</button>
+  <button onclick="nextFirma(event, 'synna')">></button>
 </div>
