--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -28,7 +28,7 @@
 
 
 
-			<div id="pk1" class="tabcontent">
+			<div class="tabcontent firma">
 			  <div class="retsepttekst">
 					<h3>Pealkiri 1</h3>
 					<ul class="koostis">
@@ -47,7 +47,7 @@
 				</div>
 			</div>
 
-			<div id="pk2" class="tabcontent">
+			<div class="tabcontent firma">
 			  <div class="retsepttekst">
 					<h3>Pealkiri 2</h3>
 					<ul class="koostis">
@@ -66,7 +66,7 @@
 				</div>
 			</div>
 
-			<div id="pk3" class="tabcontent">
+			<div class="tabcontent firma">
 			  <div class="retsepttekst">
 					<h3>Pealkiri 3</h3>
 					<ul class="koostis">
@@ -86,12 +86,81 @@
 			</div>
 
 			<div class="tab">
-				<button onclick="prevFirma(event)"><</button>
-			  <button class="tablinks" onclick="uusFirma(event, 'pk1')">1</button>
-			  <button class="tablinks" onclick="uusFirma(event, 'pk2')">2</button>
-			  <button class="tablinks" onclick="uusFirma(event, 'pk3')">3</button>
-				<button onclick="nextFirma(event)">></button>
+				<button onclick="prevFirma(event, 'firma')"><</button>
+			  <button class="tablinks firma" onclick="uusFirma(event, 0, 'firma')">1</button>
+			  <button class="tablinks firma" onclick="uusFirma(event, 1, 'firma')">2</button>
+			  <button class="tablinks firma" onclick="uusFirma(event, 2, 'firma')">3</button>
+				<button onclick="nextFirma(event, 'firma')">></button>
 			</div>
+
+
+
+
+			<div class="tabcontent synna">
+			  <div class="retsepttekst">
+			    <h3>Pealkiri 1</h3>
+			    <ul class="koostis">
+			      <li>pliinid creme fraiche ja graavilõhega</li>
+			      <li>kurgirattad avokaado ja teriyaki krevetiga</li>
+			      <li>peedi ja kitsejuustu mini quiches </li>
+			      <li>mini eggs benedict</li>
+			      <li>maguskartuli-feta salat</li>
+			      <li>vahvli ja pannkoogi skewer</li>
+			      <li>chia pudding</li>
+			    </ul>
+			    <a href="#">Saada päring</a>
+			  </div>
+			  <div class="retseptpilt">
+			    <img src="images/synna1.png" alt="synna1">
+			  </div>
+			</div>
+
+			<div class="tabcontent synna">
+			  <div class="retsepttekst">
+			    <h3>Pealkiri 2</h3>
+			    <ul class="koostis">
+			      <li>pliinid creme fraiche ja graavilõhega</li>
+			      <li>kurgirattad avokaado ja teriyaki krevetiga</li>
+			      <li>peedi ja kitsejuustu mini quiches </li>
+			      <li>mini eggs benedict</li>
+			      <li>maguskartuli-feta salat</li>
+			      <li>vahvli ja pannkoogi skewer</li>
+			      <li>chia pudding</li>
+			    </ul>
+			    <a href="#">Saada päring</a>
+			  </div>
+			  <div class="retseptpilt">
+			    <img src="images/synna2.png" alt="synna2">
+			  </div>
+			</div>
+
+			<div class="tabcontent synna">
+			  <div class="retsepttekst">
+			    <h3>Pealkiri 3</h3>
+			    <ul class="koostis">
+			      <li>pliinid creme fraiche ja graavilõhega</li>
+			      <li>kurgirattad avokaado ja teriyaki krevetiga</li>
+			      <li>peedi ja kitsejuustu mini quiches </li>
+			      <li>mini eggs benedict</li>
+			      <li>maguskartuli-feta salat</li>
+			      <li>vahvli ja pannkoogi skewer</li>
+			      <li>chia pudding</li>
+			    </ul>
+			    <a href="#">Saada päring</a>
+			  </div>
+			  <div class="retseptpilt">
+			    <img src="images/synna3.png" alt="synna3">
+			  </div>
+			</div>
+
+			<div class="tab">
+			  <button onclick="prevFirma(event, 'synna')"><</button>
+			  <button class="tablinks synna" onclick="uusFirma(event, 0, 'synna')">1</button>
+			  <button class="tablinks synna" onclick="uusFirma(event, 1, 'synna')">2</button>
+			  <button class="tablinks synna" onclick="uusFirma(event, 2, 'synna')">3</button>
+			  <button onclick="nextFirma(event, 'synna')">></button>
+			</div>
+
 
 		</main>
 		<footer class="main-footer">
