--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Miam Catering - Avaleht</title>
 	<link rel="stylesheet" type="text/css" href="normaliz.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="footer.css">
@@ -17,10 +17,10 @@
 			<article class="front">
 				<h1>Menüüd</h1>
 				<nav class="front__nav">
-					<a href="#" class="link-1">firmaüritus</a>
-					<a href="#" class="link-2">pulm</a>
-					<a href="#" class="link-3">sünnipäev</a>
-					<a href="#" class="link-4">kodukokk</a>
+					<a href="naidismenuu.html" class="link-1">firmaüritus</a>
+					<a href="naidismenuu.html" class="link-2">pulm</a>
+					<a href="naidismenuu.html#synna" class="link-3">sünnipäev</a>
+					<a href="naidismenuu.html" class="link-4">kodukokk</a>
 				</nav>
 			</article>
 		</main>
