--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Miam Catering - Menüüd</title>
 	<link rel="stylesheet" type="text/css" href="normaliz.css">
 	<link rel="stylesheet" type="text/css" href="style_menu.css">
 	<link rel="stylesheet" type="text/css" href="footer.css">
@@ -153,7 +153,7 @@
 			  </div>
 			</div>
 
-			<div class="tab">
+			<div id="synna" class="tab">
 			  <button onclick="prevFirma(event, 'synna')"><</button>
 			  <button class="tablinks synna" onclick="uusFirma(event, 0, 'synna')">1</button>
 			  <button class="tablinks synna" onclick="uusFirma(event, 1, 'synna')">2</button>
