header, ikoonid, active nr.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="wrapper">
 		<header class="main-header">
-			<h1 class="main-header__logo"></h1>
+			<h1 class="main-header__logo"><a href="#"><img src="IMAGES/LOGO1.png" width="800" height="400" alt=""></a></h1>
 		</header>
 		<main class="main-content">
 			<article class="front">
@@ -30,8 +30,8 @@
 			<p><a href="mailto:miamcatering@gmail.com">miamcatering@gmail.com</a></p>
 			<p>+372 5332 0296</p>
 			<ul class="socials-list">
-				<li><a href="https://www.facebook.com/miamcatering/" class="fb">facebook</a></li>
-				<li><a href="#" class="insta">instagram</a></li>
+				<li><a href="https://www.facebook.com/miamcatering/"><img src="images/facebook_icon.png" width="24" height="24" alt="facebook"></a></li>
+				<li><a href="#"><img src="images/Instagram_icon.png" width="24" height="24" alt="instagram"></a></li>
 			</ul>
 		</footer>
 	</div>
