--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -7,29 +7,30 @@
 	<link rel="stylesheet" type="text/css" href="normaliz.css">
 	<link rel="stylesheet" type="text/css" href="style_menu.css">
 	<link rel="stylesheet" type="text/css" href="footer.css">
+	<link rel="stylesheet" type="text/css" href="header.css">
 	<link rel="stylesheet" type="text/css" href="tabs.css">
 
 </head>
 <body>
 	<div class="wrapper">
 		<header class="main-header">
-			<h1 class="main-header__logo"></h1>
-			<nav class="front__nav">
-				<a href="#" class="link-1">näidismenüü</a>
+			<h1 class="main-header__logo"><a href="index.html"><img src="IMAGES/LOGO2.png" width="120" height="60" alt=""></a></h1>
+			<nav class="main__nav">
+				<a href="naidismenuu.html" class="link-1">näidismenüü</a>
 				<a href="#" class="link-2">galerii</a>
 				<a href="#" class="link-3">päring</a>
 			</nav>
 			<ul class="socials-list">
-				<li><a href="https://www.facebook.com/miamcatering/" class="fb">facebook</a></li>
-				<li><a href="#" class="insta">instagram</a></li>
+				<li><a href="https://www.facebook.com/miamcatering/"><img src="images/facebook_icon.png" width="24" height="24" alt="facebook"></a></li>
+				<li><a href="#"><img src="images/Instagram_icon.png" width="24" height="24" alt="instagram"></a></li>
 			</ul>
 		</header>
 		<main class="main-content">
 
 
-
 			<div class="tabcontent firma">
-			  <div class="retsepttekst">
+				<h1>firmaüritus</h1>
+				<div class="retsepttekst">
 					<h3>Pealkiri 1</h3>
 					<ul class="koostis">
 						<li>pliinid creme fraiche ja graavilõhega</li>
@@ -48,7 +49,8 @@
 			</div>
 
 			<div class="tabcontent firma">
-			  <div class="retsepttekst">
+				<h1>firmaüritus</h1>
+				<div class="retsepttekst">
 					<h3>Pealkiri 2</h3>
 					<ul class="koostis">
 						<li>pliinid creme fraiche ja graavilõhega</li>
@@ -67,7 +69,8 @@
 			</div>
 
 			<div class="tabcontent firma">
-			  <div class="retsepttekst">
+				<h1>firmaüritus</h1>
+				<div class="retsepttekst">
 					<h3>Pealkiri 3</h3>
 					<ul class="koostis">
 						<li>pliinid creme fraiche ja graavilõhega</li>
@@ -87,90 +90,91 @@
 
 			<div class="tab">
 				<button onclick="prevFirma(event, 'firma')"><</button>
-			  <button class="tablinks firma" onclick="uusFirma(event, 0, 'firma')">1</button>
-			  <button class="tablinks firma" onclick="uusFirma(event, 1, 'firma')">2</button>
-			  <button class="tablinks firma" onclick="uusFirma(event, 2, 'firma')">3</button>
+				<button class="tablinks firma" onclick="uusFirma(event, 0, 'firma')">1</button>
+				<button class="tablinks firma" onclick="uusFirma(event, 1, 'firma')">2</button>
+				<button class="tablinks firma" onclick="uusFirma(event, 2, 'firma')">3</button>
 				<button onclick="nextFirma(event, 'firma')">></button>
 			</div>
 
 
-
-
 			<div class="tabcontent synna">
-			  <div class="retsepttekst">
-			    <h3>Pealkiri 1</h3>
-			    <ul class="koostis">
-			      <li>pliinid creme fraiche ja graavilõhega</li>
-			      <li>kurgirattad avokaado ja teriyaki krevetiga</li>
-			      <li>peedi ja kitsejuustu mini quiches </li>
-			      <li>mini eggs benedict</li>
-			      <li>maguskartuli-feta salat</li>
-			      <li>vahvli ja pannkoogi skewer</li>
-			      <li>chia pudding</li>
-			    </ul>
-			    <a href="#">Saada päring</a>
-			  </div>
-			  <div class="retseptpilt">
-			    <img src="images/synna1.png" alt="synna1">
-			  </div>
+				<h1>sünnipäev</h1>
+				<div class="retsepttekst">
+				    <h3>Pealkiri 1</h3>
+				    <ul class="koostis">
+				    	<li>pliinid creme fraiche ja graavilõhega</li>
+				    	<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+				    	<li>peedi ja kitsejuustu mini quiches </li>
+				    	<li>mini eggs benedict</li>
+				    	<li>maguskartuli-feta salat</li>
+				    	<li>vahvli ja pannkoogi skewer</li>
+				    	<li>chia pudding</li>
+				    </ul>
+				    <a href="#">Saada päring</a>
+				</div>
+				<div class="retseptpilt">
+			    	<img src="images/synna1.png" alt="synna1">
+			  	</div>
 			</div>
 
 			<div class="tabcontent synna">
-			  <div class="retsepttekst">
-			    <h3>Pealkiri 2</h3>
-			    <ul class="koostis">
-			      <li>pliinid creme fraiche ja graavilõhega</li>
-			      <li>kurgirattad avokaado ja teriyaki krevetiga</li>
-			      <li>peedi ja kitsejuustu mini quiches </li>
-			      <li>mini eggs benedict</li>
-			      <li>maguskartuli-feta salat</li>
-			      <li>vahvli ja pannkoogi skewer</li>
-			      <li>chia pudding</li>
-			    </ul>
-			    <a href="#">Saada päring</a>
-			  </div>
-			  <div class="retseptpilt">
-			    <img src="images/synna2.png" alt="synna2">
-			  </div>
+				<h1>sünnipäev</h1>
+			  	<div class="retsepttekst">
+			    	<h3>Pealkiri 2</h3>
+			    	<ul class="koostis">
+				      	<li>pliinid creme fraiche ja graavilõhega</li>
+				      	<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+				     	<li>peedi ja kitsejuustu mini quiches </li>
+				      	<li>mini eggs benedict</li>
+				      	<li>maguskartuli-feta salat</li>
+				      	<li>vahvli ja pannkoogi skewer</li>
+				      	<li>chia pudding</li>
+			    	</ul>
+			    	<a href="#">Saada päring</a>
+			  	</div>
+			  	<div class="retseptpilt">
+			    	<img src="images/synna2.png" alt="synna2">
+			  	</div>
 			</div>
 
 			<div class="tabcontent synna">
-			  <div class="retsepttekst">
-			    <h3>Pealkiri 3</h3>
-			    <ul class="koostis">
-			      <li>pliinid creme fraiche ja graavilõhega</li>
-			      <li>kurgirattad avokaado ja teriyaki krevetiga</li>
-			      <li>peedi ja kitsejuustu mini quiches </li>
-			      <li>mini eggs benedict</li>
-			      <li>maguskartuli-feta salat</li>
-			      <li>vahvli ja pannkoogi skewer</li>
-			      <li>chia pudding</li>
-			    </ul>
-			    <a href="#">Saada päring</a>
-			  </div>
-			  <div class="retseptpilt">
-			    <img src="images/synna3.png" alt="synna3">
-			  </div>
+				<h1>sünnipäev</h1>
+			  	<div class="retsepttekst">
+				    <h3>Pealkiri 3</h3>
+				    <ul class="koostis">
+				      	<li>pliinid creme fraiche ja graavilõhega</li>
+				      	<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+				      	<li>peedi ja kitsejuustu mini quiches </li>
+				      	<li>mini eggs benedict</li>
+				      	<li>maguskartuli-feta salat</li>
+				      	<li>vahvli ja pannkoogi skewer</li>
+				      	<li>chia pudding</li>
+				    </ul>
+				    <a href="#">Saada päring</a>
+			  	</div>
+			  	<div class="retseptpilt">
+			    	<img src="images/synna3.png" alt="synna3">
+			  	</div>
 			</div>
 
 			<div id="synna" class="tab">
-			  <button onclick="prevFirma(event, 'synna')"><</button>
-			  <button class="tablinks synna" onclick="uusFirma(event, 0, 'synna')">1</button>
-			  <button class="tablinks synna" onclick="uusFirma(event, 1, 'synna')">2</button>
-			  <button class="tablinks synna" onclick="uusFirma(event, 2, 'synna')">3</button>
-			  <button onclick="nextFirma(event, 'synna')">></button>
+			  	<button onclick="prevFirma(event, 'synna')"><</button>
+			  	<button class="tablinks synna" onclick="uusFirma(event, 0, 'synna')">1</button>
+			  	<button class="tablinks synna" onclick="uusFirma(event, 1, 'synna')">2</button>
+			  	<button class="tablinks synna" onclick="uusFirma(event, 2, 'synna')">3</button>
+			  	<button onclick="nextFirma(event, 'synna')">></button>
 			</div>
 
 
 		</main>
 		<footer class="main-footer">
-			<p class="main-footer__logo"></p>
+			<h1 class="main-header__logo"><a href="index.html"><img src="IMAGES/LOGO2.png" width="120" height="60" alt=""></a></h1>
 			<p>Miam OÜ</p>
 			<p><a href="mailto:miamcatering@gmail.com">miamcatering@gmail.com</a></p>
 			<p>+372 5332 0296</p>
 			<ul class="socials-list">
-				<li><a href="https://www.facebook.com/miamcatering/" class="fb">facebook</a></li>
-				<li><a href="#" class="insta">instagram</a></li>
+				<li><a href="https://www.facebook.com/miamcatering/"><img src="images/facebook_icon.png" width="24" height="24" alt="facebook"></a></li>
+				<li><a href="#"><img src="images/Instagram_icon.png" width="24" height="24" alt="instagram"></a></li>
 			</ul>
 		</footer>
 	</div>
