--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -22,7 +22,7 @@
 			</nav>
 			<ul class="socials-list">
 				<li><a href="https://www.facebook.com/miamcatering/"><img src="images/facebook_icon.png" width="24" height="24" alt="facebook"></a></li>
-				<li><a href="#"><img src="images/Instagram_icon.png" width="24" height="24" alt="instagram"></a></li>
+				<li><a href="https://www.instagram.com/miamcatering/"><img src="images/Instagram_icon.png" width="24" height="24" alt="instagram"></a></li>
 			</ul>
 		</header>
 		<main class="main-content">
