--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 	<div class="wrapper">
 		<header class="main-header">
-			<h1 class="main-header__logo"><a href="#"><img src="IMAGES/LOGO1.png" width="800" height="400" alt=""></a></h1>
+			<h1 class="main-header__logo"><a href="#"><img src="IMAGES/LOGO1.png" width="800" height="400" alt="MaimCatering"></a></h1>
 		</header>
 		<main class="main-content">
 			<article class="front">
-				<h1>Menüüd</h1>
+				<h1 class="sr-only">Menüüd</h1>
 				<nav class="front__nav">
 					<a href="naidismenuu.html" class="link-1">firmaüritus</a>
 					<a href="naidismenuu.html" class="link-2">pulm</a>
