--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8">
 	<title>Miam Catering - Menüüd</title>
 	<link rel="stylesheet" type="text/css" href="normaliz.css">
-	<link rel="stylesheet" type="text/css" href="style_menu.css">
 	<link rel="stylesheet" type="text/css" href="footer.css">
 	<link rel="stylesheet" type="text/css" href="header.css">
 	<link rel="stylesheet" type="text/css" href="tabs.css">
@@ -16,9 +15,9 @@
 		<header class="main-header">
 			<h1 class="main-header__logo"><a href="index.html"><img src="IMAGES/LOGO2.png" width="120" height="60" alt=""></a></h1>
 			<nav class="main__nav">
-				<a href="naidismenuu.html" class="link-1">näidismenüü</a>
-				<a href="#" class="link-2">galerii</a>
-				<a href="#" class="link-3">päring</a>
+				<a href="naidismenuu.html" >näidismenüü</a>
+				<a href="galerii.html" class="nonactive-nav">galerii</a>
+				<a href="paring.html" class="nonactive-nav">päring</a>
 			</nav>
 			<ul class="socials-list">
 				<li><a href="https://www.facebook.com/miamcatering/"><img src="images/facebook_icon.png" width="24" height="24" alt="facebook"></a></li>
@@ -34,7 +33,7 @@
 
 					<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
-						<h3>Pealkiri 1</h3>
+						<h3>pealkiri 1</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -55,7 +54,8 @@
 				<div class="tabcontent firma">
 					<h2>firmaüritus</h2>
 					<div class="retsepttekst">
-						<h3>Pealkiri 2</h3>
+					<img class="kiired" src="images/kiired.png">
+						<h3>pealkiri 2</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -65,7 +65,8 @@
 							<li>vahvli ja pannkoogi skewer</li>
 							<li>chia pudding</li>
 						</ul>
-						<a href="#">Saada päring</a>
+						<img class="nool" src="images/nool.png">
+						<a href="#">saada päring</a>
 					</div>
 					<div class="retseptpilt">
 						<img src="images/firma2.png" alt="firma2">
@@ -75,7 +76,8 @@
 				<div class="tabcontent firma">
 					<h2>firmaüritus</h2>
 					<div class="retsepttekst">
-						<h3>Pealkiri 3</h3>
+					<img class="kiired" src="images/kiired.png">
+						<h3>pealkiri 3</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -85,7 +87,8 @@
 							<li>vahvli ja pannkoogi skewer</li>
 							<li>chia pudding</li>
 						</ul>
-						<a href="#">Saada päring</a>
+						<img class="nool" src="images/nool.png">
+						<a href="#">saada päring</a>
 					</div>
 					<div class="retseptpilt">
 						<img src="images/firma3.png" alt="firma3">
@@ -105,7 +108,8 @@
 				<div class="tabcontent pulm">
 					<h2>pulmad</h2>
 					<div class="retsepttekst">
-						<h3>Pealkiri 1</h3>
+					<img class="kiired" src="images/kiired.png">
+						<h3>pealkiri 1</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -115,7 +119,8 @@
 							<li>vahvli ja pannkoogi skewer</li>
 							<li>chia pudding</li>
 						</ul>
-						<a href="#">Saada päring</a>
+						<img class="nool" src="images/nool.png">
+						<a href="#">saada päring</a>
 					</div>
 					<div class="retseptpilt">
 						<img src="images/firma1.png" alt="pulm1">
@@ -124,7 +129,8 @@
 				<div class="tabcontent pulm">
 					<h2>pulmad</h2>
 					<div class="retsepttekst">
-						<h3>Pealkiri 2</h3>
+					<img class="kiired" src="images/kiired.png">
+						<h3>pealkiri 1</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -134,7 +140,8 @@
 							<li>vahvli ja pannkoogi skewer</li>
 							<li>chia pudding</li>
 						</ul>
-						<a href="#">Saada päring</a>
+						<img class="nool" src="images/nool.png">
+						<a href="#">saada päring</a>
 					</div>
 					<div class="retseptpilt">
 						<img src="images/pulm2.png" alt="pulm2">
@@ -144,7 +151,8 @@
 				<div class="tabcontent pulm">
 					<h2>pulmad</h2>
 					<div class="retsepttekst">
-						<h3>Pealkiri 3</h3>
+					<img class="kiired" src="images/kiired.png">
+						<h3>pealkiri 1</h3>
 						<ul class="koostis">
 							<li>pliinid creme fraiche ja graavilõhega</li>
 							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
@@ -154,7 +162,8 @@
 							<li>vahvli ja pannkoogi skewer</li>
 							<li>chia pudding</li>
 						</ul>
-						<a href="#">Saada päring</a>
+						<img class="nool" src="images/nool.png">
+						<a href="#">saada päring</a>
 					</div>
 					<div class="retseptpilt">
 						<img src="images/pulm3.png" alt="pulm3">
@@ -176,17 +185,19 @@
 				<div class="tabcontent synna">
 					<h2>sünnipäev</h2>
 					<div class="retsepttekst">
-					    <h3>Pealkiri 1</h3>
-					    <ul class="koostis">
-					    	<li>pliinid creme fraiche ja graavilõhega</li>
-					    	<li>kurgirattad avokaado ja teriyaki krevetiga</li>
-					    	<li>peedi ja kitsejuustu mini quiches </li>
-					    	<li>mini eggs benedict</li>
-					    	<li>maguskartuli-feta salat</li>
-					    	<li>vahvli ja pannkoogi skewer</li>
-					    	<li>chia pudding</li>
-					    </ul>
-					    <a href="#">Saada päring</a>
+					<img class="kiired" src="images/kiired.png">
+						<h3>pealkiri 1</h3>
+						<ul class="koostis">
+							<li>pliinid creme fraiche ja graavilõhega</li>
+							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+							<li>peedi ja kitsejuustu mini quiches </li>
+							<li>mini eggs benedict</li>
+							<li>maguskartuli-feta salat</li>
+							<li>vahvli ja pannkoogi skewer</li>
+							<li>chia pudding</li>
+						</ul>
+						<img class="nool" src="images/nool.png">
+						<a href="#">saada päring</a>
 					</div>
 					<div class="retseptpilt">
 				    	<img src="images/synna1.png" alt="synna1">
@@ -196,18 +207,20 @@
 				<div class="tabcontent synna">
 					<h2>sünnipäev</h2>
 				  	<div class="retsepttekst">
-				    	<h3>Pealkiri 2</h3>
-				    	<ul class="koostis">
-					      	<li>pliinid creme fraiche ja graavilõhega</li>
-					      	<li>kurgirattad avokaado ja teriyaki krevetiga</li>
-					     	<li>peedi ja kitsejuustu mini quiches </li>
-					      	<li>mini eggs benedict</li>
-					      	<li>maguskartuli-feta salat</li>
-					      	<li>vahvli ja pannkoogi skewer</li>
-					      	<li>chia pudding</li>
-				    	</ul>
-				    	<a href="#">Saada päring</a>
-				  	</div>
+					<img class="kiired" src="images/kiired.png">
+						<h3>pealkiri 1</h3>
+						<ul class="koostis">
+							<li>pliinid creme fraiche ja graavilõhega</li>
+							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+							<li>peedi ja kitsejuustu mini quiches </li>
+							<li>mini eggs benedict</li>
+							<li>maguskartuli-feta salat</li>
+							<li>vahvli ja pannkoogi skewer</li>
+							<li>chia pudding</li>
+						</ul>
+						<img class="nool" src="images/nool.png">
+						<a href="#">saada päring</a>
+					</div>
 				  	<div class="retseptpilt">
 				    	<img src="images/synna2.png" alt="synna2">
 				  	</div>
@@ -216,18 +229,20 @@
 				<div class="tabcontent synna">
 					<h2>sünnipäev</h2>
 				  	<div class="retsepttekst">
-					    <h3>Pealkiri 3</h3>
-					    <ul class="koostis">
-					      	<li>pliinid creme fraiche ja graavilõhega</li>
-					      	<li>kurgirattad avokaado ja teriyaki krevetiga</li>
-					      	<li>peedi ja kitsejuustu mini quiches </li>
-					      	<li>mini eggs benedict</li>
-					      	<li>maguskartuli-feta salat</li>
-					      	<li>vahvli ja pannkoogi skewer</li>
-					      	<li>chia pudding</li>
-					    </ul>
-					    <a href="#">Saada päring</a>
-				  	</div>
+					<img class="kiired" src="images/kiired.png">
+						<h3>pealkiri 1</h3>
+						<ul class="koostis">
+							<li>pliinid creme fraiche ja graavilõhega</li>
+							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+							<li>peedi ja kitsejuustu mini quiches </li>
+							<li>mini eggs benedict</li>
+							<li>maguskartuli-feta salat</li>
+							<li>vahvli ja pannkoogi skewer</li>
+							<li>chia pudding</li>
+						</ul>
+						<img class="nool" src="images/nool.png">
+						<a href="#">saada päring</a>
+					</div>
 				  	<div class="retseptpilt">
 				    	<img src="images/synna3.png" alt="synna3">
 				  	</div>
@@ -240,7 +255,6 @@
 				  	<button class="tablinks synna" onclick="uusFirma(event, 2, 'synna')">3</button>
 				  	<button onclick="nextFirma(event, 'synna')">></button>
 				</div>
-			</div>
 			</div>
 
 <!-- Kodukoka list-->
