footer ja header taust

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</article>
 		</main>
 		<footer class="main-footer">
-			<p class="main-footer__logo"></p>
+			<h1 class="main-header__logo"><a href="index.html"><img src="IMAGES/LOGO2.png" width="120" height="60" alt=""></a></h1>
 			<p>Miam OÜ</p>
 			<p><a href="mailto:miamcatering@gmail.com">miamcatering@gmail.com</a></p>
 			<p>+372 5332 0296</p>
