--- a/paring.html
+++ b/paring.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="paring.css">
 <body>
 	<div class="wrapper">
+		<div class="background">
 		<header class="main-header">
 			<h1 class="main-header__logo"><a href="index.html"><img src="IMAGES/LOGO2.png" width="120" height="60" alt=""></a></h1>
 			<nav class="main__nav">
@@ -20,6 +21,8 @@
 				<li><a href="https://www.instagram.com/miamcatering/"><img src="images/Instagram_icon.png" width="24" height="24" alt="instagram"></a></li>
 			</ul>
 		</header>
+		<main class="main-content">
+		<h1 class="sr-only">päring</h1>
 
 		<form id="paring" method="POST" >
 			näidismenüü:<br> <input type="datalist_tabs" name="menuu"><br>
@@ -38,6 +41,7 @@
 		  	lisainfo:<br> <input type="text" name="info"><br>
 		  	<input type="submit" value="Saada päring">
 		</form>
+		</main>
 		<footer class="main-footer">
 			<h1 class="main-header__logo"><a href="index.html"><img src="IMAGES/LOGO2.png" width="120" height="60" alt=""></a></h1>
 			<p>Miam OÜ</p>
@@ -48,6 +52,7 @@
 				<li><a href="#"><img src="images/Instagram_icon.png" width="24" height="24" alt="instagram"></a></li>
 			</ul>
 		</footer>
+		</div>
 	</div>
 </body>
 </html>
