--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<article class="front">
 				<h1 class="sr-only">Menüüd</h1>
 				<nav class="front__nav">
-					<a href="naidismenuu.html" class="link-1">firmaüritus</a>
-					<a href="naidismenuu.html" class="link-2">pulm</a>
+					<a href="naidismenuu.html#firma" class="link-1">firmaüritus</a>
+					<a href="naidismenuu.html#pulm" class="link-2">pulm</a>
 					<a href="naidismenuu.html#synna" class="link-3">sünnipäev</a>
 					<a href="naidismenuu.html" class="link-4">kodukokk</a>
 				</nav>
