--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -25,8 +25,8 @@
 		</header>
 		<main class="main-content">
 			<h1 class="sr-only">näidismeüüd</h1>
-			<div class="container">
 <!-- Firmaürituse list-->
+			<div id="firma" class="container">
 				<div class="tabcontent firma">
 					<h2>firmaüritus</h2>
 
@@ -103,7 +103,7 @@
 				</div>
 			</div>
 <!-- Pulmade list-->
-			<div class="container">
+			<div id="pulm" class="container">
 				<div class="tabcontent pulm">
 					<h2>pulmad</h2>
 					<div class="retsepttekst">
@@ -143,7 +143,7 @@
 						<a href="#">saada päring</a>
 					</div>
 					<div class="retseptpilt">
-						<img src="images/pulm2.png" alt="pulm2">
+						<img src="images/firma2.png" alt="pulm2">
 					</div>
 				</div>
 
@@ -165,7 +165,7 @@
 						<a href="#">saada päring</a>
 					</div>
 					<div class="retseptpilt">
-						<img src="images/pulm3.png" alt="pulm3">
+						<img src="images/firma3.png" alt="pulm3">
 					</div>
 				</div>
 
@@ -180,7 +180,7 @@
 
 <!-- Sünnipäeva list-->
 
-			<div class="container">
+			<div id="synna" class="container">
 				<div class="tabcontent synna">
 					<h2>sünnipäev</h2>
 					<div class="retsepttekst">
@@ -203,7 +203,7 @@
 				  	</div>
 				</div>
 
-				<div class="tabcontent synna">
+				<div  class="tabcontent synna">
 					<h2>sünnipäev</h2>
 				  	<div class="retsepttekst">
 					<img class="kiired" src="images/kiired.png">
@@ -247,7 +247,7 @@
 				  	</div>
 				</div>
 
-				<div id="synna" class="tab">
+				<div class="tab">
 				  	<button onclick="prevFirma(event, 'synna')"><</button>
 				  	<button class="tablinks synna" onclick="uusFirma(event, 0, 'synna')">1</button>
 				  	<button class="tablinks synna" onclick="uusFirma(event, 1, 'synna')">2</button>
