--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<a href="naidismenuu.html#firma" class="link-1">firmaüritus</a>
 					<a href="naidismenuu.html#pulm" class="link-2">pulm</a>
 					<a href="naidismenuu.html#synna" class="link-3">sünnipäev</a>
-					<a href="naidismenuu.html" class="link-4">kodukokk</a>
+					<a href="naidismenuu.html#kokk" class="link-4">kodukokk</a>
 				</nav>
 			</article>
 		</main>
