--- a/naidismenuu.html
+++ b/naidismenuu.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Miam Catering - Menüüd</title>
-	<link rel="stylesheet" type="text/css" href="normaliz.css">
+
 	<link rel="stylesheet" type="text/css" href="footer.css">
 	<link rel="stylesheet" type="text/css" href="header.css">
 	<link rel="stylesheet" type="text/css" href="tabs.css">
@@ -257,6 +257,82 @@
 			</div>
 
 <!-- Kodukoka list-->
+
+			<div id="kokk" class="container">
+				<div class="tabcontent kodukokk">
+					<h2>kodukokk</h2>
+					<div class="retsepttekst">
+					<img class="kiired" src="images/kiired.png">
+						<h3>pealkiri 1</h3>
+						<ul class="koostis">
+							<li>pliinid creme fraiche ja graavilõhega</li>
+							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+							<li>peedi ja kitsejuustu mini quiches </li>
+							<li>mini eggs benedict</li>
+							<li>maguskartuli-feta salat</li>
+							<li>vahvli ja pannkoogi skewer</li>
+							<li>chia pudding</li>
+						</ul>
+						<img class="nool" src="images/nool.png">
+						<a href="#">saada päring</a>
+					</div>
+					<div class="retseptpilt">
+				    	<img src="images/synna1.png" alt="synna1">
+				  	</div>
+				</div>
+
+				<div  class="tabcontent kodukokk">
+					<h2>kodukokk</h2>
+				  	<div class="retsepttekst">
+					<img class="kiired" src="images/kiired.png">
+						<h3>pealkiri 1</h3>
+						<ul class="koostis">
+							<li>pliinid creme fraiche ja graavilõhega</li>
+							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+							<li>peedi ja kitsejuustu mini quiches </li>
+							<li>mini eggs benedict</li>
+							<li>maguskartuli-feta salat</li>
+							<li>vahvli ja pannkoogi skewer</li>
+							<li>chia pudding</li>
+						</ul>
+						<img class="nool" src="images/nool.png">
+						<a href="#">saada päring</a>
+					</div>
+				  	<div class="retseptpilt">
+				    	<img src="images/synna2.png" alt="synna2">
+				  	</div>
+				</div>
+
+				<div class="tabcontent kodukokk">
+					<h2>kodukokk</h2>
+				  	<div class="retsepttekst">
+					<img class="kiired" src="images/kiired.png">
+						<h3>pealkiri 1</h3>
+						<ul class="koostis">
+							<li>pliinid creme fraiche ja graavilõhega</li>
+							<li>kurgirattad avokaado ja teriyaki krevetiga</li>
+							<li>peedi ja kitsejuustu mini quiches </li>
+							<li>mini eggs benedict</li>
+							<li>maguskartuli-feta salat</li>
+							<li>vahvli ja pannkoogi skewer</li>
+							<li>chia pudding</li>
+						</ul>
+						<img class="nool" src="images/nool.png">
+						<a href="#">saada päring</a>
+					</div>
+				  	<div class="retseptpilt">
+				    	<img src="images/synna3.png" alt="synna3">
+				  	</div>
+				</div>
+
+				<div class="tab">
+				  	<button onclick="prevFirma(event, 'kodukokk')"><</button>
+				  	<button class="tablinks kodukokk" onclick="uusFirma(event, 0, 'kodukokk')">1</button>
+				  	<button class="tablinks kodukokk" onclick="uusFirma(event, 1, 'kodukokk')">2</button>
+				  	<button class="tablinks kodukokk" onclick="uusFirma(event, 2, 'kodukokk')">3</button>
+				  	<button onclick="nextFirma(event, 'kodukokk')">></button>
+				</div>
+			</div>
 
 		</main>
 		<footer class="main-footer">
